--- a/Reporte final.ipynb
+++ b/Reporte final.ipynb
@@ -380,6 +380,22 @@
     "# ¿Que más se pudo haber hecho?\n",
     "Después de probar tantas mutaciones a las capas convolucionales y neuronales, se empezó a probar con la función de activación SoftPlus para prevenir el estancamiento del gradiente y probar una diferente tasa de aprendizaje. Pero por tema de tiempo límite y capacidad de computo, no se pudo seguir probando."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Conclusiones\n",
+    "\n",
+    "Las redes neuronales convolucionales para clasificación de imágenes, como las entrenadas en este reporte, pueden fácilmente llegar a ser muy complejas, tanto en su estructura como en su afinamiento (hyperparámetros y estructura de la red) y el consumo de recursos requeridos para entrenarlas es muy alto en términos de tiempo y capacidad de procesamiento. Esto supone una brecha importante al querer hacer ingreso al mundo de la investigación de las CNN, u queda demostrado al ver la calidad de las redes entrenadas."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
